# laydown

./: .gitignore  AGENTS.md  AppxManifest.xml  CHANGELOG.md  LICENSING.md  README.md  ROADMAP.md  TODO.md  codegraph.json  pyproject.toml
.github/workflows/: deploy.yml  release.yml  store.yml
docs/ai/: DECISIONS.md  DESIGN_SYSTEM.md  GOTCHAS.md  START_HERE.md
laydown/: __init__.py  __main__.py
laydown/ui/: icons.py  main_window.py  preview_panel.py  theme.py
pressready/: __init__.py  __main__.py
pressready/engine/: capabilities.py  data_model.py  geometry.py  impose.py  marks.py  preflight.py  preprocessors.py  utils.py
pressready/ui/: components.py  help.py  layout_tab.py  main_window.py  marks_tab.py  panel.py  preprocessors_tab.py  presets.py  preview_panel.py  schema.py  sheet_tab.py  theme.py
tests/: conftest.py  helpers.py  test_booklet_order.py  test_capabilities.py  test_determinism.py  test_engine_robustness.py  test_icons.py  test_layout_depth.py  test_marks_units_preflight.py  test_panel.py  test_preview_overlay.py  test_roundtrip.py  test_source_boxes.py  test_utils.py
