[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pressready"
dynamic = ["version"]
description = "Professional PDF Imposition Tool — N-Up, Booklet, Preprocessors, Marks"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Mevit"}
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
]
dependencies = [
    "PyQt6>=6.4.0",
    "PyMuPDF>=1.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.2.0",
]

[project.scripts]
pressready = "pressready.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pressready*"]

# Single source of truth for the version: pressready/__init__.py
[tool.setuptools.dynamic]
version = {attr = "pressready.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
